# actix_web_starter

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-bake.hcl  justfile  lefthook.yml
.github/workflows/: docker-publish.yml  test-on-pr.yml
migrations/: 20250708091103_init.down.sql  20250708091103_init.up.sql
src/: api.rs  db.rs  lib.rs  main.rs
tests/: integration_tests.rs
