[package]
name = "actix_web_starter"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "migrate",
    "sqlite",
    "derive",
    "chrono",
    "macros",
] }
tempfile = "3.20.0"
